--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.1",
     "svelte": "^5.1.3",
     "vite": "^5.4.10"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.46.2"
   }
 }
